error_log.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/pav/code/our_places_rs/app_api/booking_api/Cargo.toml
workspace: /home/pav/code/our_places_rs/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/pav/code/our_places_rs/app_api/listing_api/Cargo.toml
workspace: /home/pav/code/our_places_rs/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/pav/code/our_places_rs/app_api/user_api/Cargo.toml
workspace: /home/pav/code/our_places_rs/Cargo.toml
    Checking web_app_admin v0.1.0 (/home/pav/code/our_places_rs/web_app_admin)
error[E0432]: unresolved import `leptos_router::ActionForm`
 --> web_app_admin/src/components/login.rs:3:5
  |
3 | use leptos_router::ActionForm;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no `ActionForm` in the root

error[E0599]: the method `class` exists for struct `ActionFormPropsBuilder<_, _>`, but its trait bounds were not satisfied
  --> web_app_admin/src/components/login.rs:21:53
   |
11 | /     view! {
12 | |         <div class="hero min-h-screen bg-base-200">
13 | |             <div class="hero-content flex-col lg:flex-row-reverse">
14 | |                 <div class="text-center lg:text-left">
...  |
20 | |                 <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
21 | |                     <ActionForm action=login_action class="card-body">
   | |                                                    -^^^^^ method cannot be called on `ActionFormPropsBuilder<_, _>` due to unsatisfied trait bounds
   | |____________________________________________________|
   |
   |
  ::: /home/pav/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/leptos-0.8.15/src/form.rs:77:1
   |
77 |   #[component]
   |   ------------ doesn't satisfy `ActionFormPropsBuilder<_, _>: AsRef<Element>` or `_: ElementExt`
   |
   = note: the following trait bounds were not satisfied:
           `ActionFormPropsBuilder<_, _>: AsRef<Element>`
           which is required by `ActionFormPropsBuilder<_, _>: leptos::prelude::ElementExt`

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `web_app_admin` (lib) due to 2 previous errors
